[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Field.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Platform.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/MainGame.gd" type="Script" id=3]
[ext_resource path="res://scenes/Ball.tscn" type="PackedScene" id=4]

[node name="MainGame" type="Node"]
script = ExtResource( 3 )

[node name="Field" parent="." instance=ExtResource( 1 )]

[node name="FirstPlatformPos" type="Position2D" parent="."]
position = Vector2( 24, 300 )

[node name="SecPlatformPos" type="Position2D" parent="."]
position = Vector2( 1000, 300 )

[node name="BallPos" type="Position2D" parent="."]
position = Vector2( 512, 300 )

[node name="Player1" parent="." instance=ExtResource( 2 )]

[node name="Player2" parent="." instance=ExtResource( 2 )]

[node name="Ball" parent="." instance=ExtResource( 4 )]
